[package]
name = "dev-cli"
version = "0.1.0"
authors = ["Ian Wilson <iwilsonq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
hyper = { version = "0.13.0-alpha.4", features = ["runtime"]}
tokio = "0.2.0-alpha.6"
